data/derived/fa15/progs/unify/prog1858.ml.out
Characters 66-67:
  let movedList=l@0 in (bit+1,bigAdd movedList x) in 
                  ^
Error: This expression has type int but an expression was expected of type
         'a list
